[package]
name = "light-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
